3:29 pm segues updated

--- a/e-bility/Base.lproj/Main.storyboard
+++ b/e-bility/Base.lproj/Main.storyboard
@@ -911,11 +911,11 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="BIr-Vx-moo"/>
-        <segue reference="N2K-By-kUj"/>
-        <segue reference="3X2-kT-EVq"/>
-        <segue reference="L79-NV-sxy"/>
-        <segue reference="B3u-hQ-7xn"/>
+        <segue reference="Z2p-he-1l0"/>
+        <segue reference="iCi-sz-cXI"/>
+        <segue reference="JqL-G5-y71"/>
+        <segue reference="sgq-ai-1uN"/>
+        <segue reference="OdW-2V-Bda"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="RETRO_GROOVE-removebg-preview" width="500" height="500"/>
